added div classes for CSS

--- a/Codecademy/Projects/Tea_Cozy/index.html
+++ b/Codecademy/Projects/Tea_Cozy/index.html
@@ -27,7 +27,7 @@
         <a>Myrtle Ave Tea</a>
         <a>Bedford Bizarre Tea</a>
     </div>
-    <div>
+    <div class="locations">
         <h2>Locations</h2>
     </div>
     <div>
